etc/iptables/rules.v4
# Generated by iptables-save v1.8.11 (nf_tables) on Wed Sep 23 09:59:50 2026
*filter
:INPUT ACCEPT [1647:167480]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1270:123456]
-A FORWARD -s 10.0.3.0/24 -i lxcbr0 -o eth0 -j ACCEPT
-A FORWARD -d 10.0.3.0/24 -i wlan0 -o lxcbr0 -j ACCEPT
COMMIT
# Completed on Wed Sep 23 09:59:50 2026
# Generated by iptables-save v1.8.11 (nf_tables) on Wed Sep 23 09:59:50 2026
*nat
:PREROUTING ACCEPT [48:11770]
:INPUT ACCEPT [48:11770]
:OUTPUT ACCEPT [2:168]
:POSTROUTING ACCEPT [12:768]
-A PREROUTING -i wlan0 -p tcp -m tcp --dport 8001 -j DNAT --to-destination 10.0.3.1:80
-A PREROUTING -i wlan0 -p tcp -m tcp --dport 8002 -j DNAT --to-destination 10.0.3.2:80
-A PREROUTING -i wlan0 -p tcp -m tcp --dport 8003 -j DNAT --to-destination 10.0.3.3:80
-A PREROUTING -i wlan0 -p tcp -m tcp --dport 8004 -j DNAT --to-destination 10.0.3.4:80
-A PREROUTING -i wlan0 -p tcp -m tcp --dport 8005 -j DNAT --to-destination 10.0.3.5:80
-A POSTROUTING -s 10.0.3.0/24 -o wlan0 -j MASQUERADE
COMMIT
# Completed on Wed Sep 23 09:59:50 2026
